# orvyn

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
docs/source/: conf.py  index.rst
src/app/: pyproject.toml
src/app/src/app/: __init__.py  main.py
src/desktop_ui/: pyproject.toml
src/desktop_ui/src/desktop_ui/: __init__.py  app_window.py  chat_body.py  chat_header.py  chat_layout.py  icon_button.py  main.py  sidebar.py  text_input_panel.py  utils.py
src/desktop_ui/src/desktop_ui/metaclasses/: __init__.py
src/ollama-client/: pyproject.toml
src/ollama-client/src/ollama_client/: __init__.py  main.py  ollama_service.py
