[project]
name = "orvyn"
version = "0.2.0"
description = "Add your description here"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = ["src/desktop_ui", "src/app"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.4",
]
