[project]
name = "orvyn"
version = "0.2.0"
description = "Add your description here"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sphinx>=8.1.3",
]

[tool.uv.workspace]
members = ["src/desktop_ui", "src/app", "src/ollama-client"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]
