[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maksim Kropanov", email = "kropanov@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
