[project]
name = "desktop-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maksim Kropanov", email = "kropanov@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "kivy>=2.3.1",
]

[project.scripts]
desktop-ui = "desktop_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/desktop_ui"]
